modif client lourd